--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
+    "json": "json-server --watch  data.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +19,10 @@
   },
   "homepage": "https://github.com/telenord/node_react_graphql#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
-    "lodash": "^4.17.5",
-    "nodemon": "^1.17.3"
+    "json-server": "^0.12.1"
   }
 }
